# Snake-game

./: .gitignore  CMakeLists.txt  README.md  config.h.in
includes/: collision.hpp  deadstate.hpp  food.hpp  gameengine.hpp  gamestate.hpp  menustate.hpp  playingstate.hpp  snake.hpp
sources/: Game.cpp  Game.hpp  GameState.hpp  collision.cpp  collision.hpp  deadstate.cpp  deadstate.hpp  food.cpp  food.hpp  gameengine.cpp  gameengine.hpp  gamestate.hpp  item.cpp  item.hpp  main.cpp  menustate.cpp  menustate.hpp  playingstate.cpp  playingstate.hpp  snake-app.cbp  snake-app.depend  snake-app.layout  snake.cpp  snake.depend  snake.hpp  snake.layout
sources/sources/: collision.cpp  collision.hpp  main.cpp  menustate.hpp  snake.cpp
src/: collision.cpp  deadstate.cpp  food.cpp  gameengine.cpp  main.cpp  menustate.cpp  playingstate.cpp  snake.cpp
